--- a/list-product.html
+++ b/list-product.html
@@ -299,6 +299,16 @@
     
     <!-- end -->
 
+
+    <!-- js chat bot -->
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger
+      intent="WELCOME"
+      chat-title="Hỗ trợ AI"
+      agent-id="020b6d32-f258-4915-93aa-7290ea1ae3c6"
+      language-code="vi"
+    ></df-messenger>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -316,7 +326,7 @@
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
 
-    <!--  -->
+    <!-- tinh/thanh pho -->
     <script>
         const provinceList = document.querySelector(".filter-province-list");
 
